--- a/notebook/heterophily_exp_syn_cora.ipynb
+++ b/notebook/heterophily_exp_syn_cora.ipynb
@@ -2904,17 +2904,17 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "gnn-geometry",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.11.0 (v3.11.0:deaf509e8f, Oct 24 2022, 14:43:23) [Clang 13.0.0 (clang-1300.0.29.30)]"
+      "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+        "hash": "47376eb6d3950ca46f79a60746adf71b22ccac123a6c16a97caf8802103a8c13"
       }
     }
   },
